--- a/Lab14/Lab14/View/ShowProductPage.xaml
+++ b/Lab14/Lab14/View/ShowProductPage.xaml
@@ -1,13 +1,94 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:ViewModel="clr-namespace:Lab14.ViewModel"
              x:Class="Lab14.View.ShowProductPage">
+    <ContentPage.BindingContext>
+        <ViewModel:ProductViewModel/>
+    </ContentPage.BindingContext>
     <ContentPage.ToolbarItems>
         <ToolbarItem IconImageSource="editar.png" Order="Primary" Priority="0"/>
     </ContentPage.ToolbarItems>
+    <ContentPage.Resources>
+        <ViewModel:InverseBoolConverter x:Key="InverseBoolConverter"/>
+    </ContentPage.Resources>
     <ContentPage.Content>
         <StackLayout>
-            
+            <StackLayout.Padding>
+                <OnPlatform
+                    x:TypeArguments="Thickness"
+                    Android="20"
+                    iOS="50" />
+            </StackLayout.Padding>
+            <ListView
+                ItemsSource="{Binding Productos}"
+                HasUnevenRows="True"            
+                SeparatorVisibility="None">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <Frame
+                                CornerRadius="20"
+                                HasShadow="True"
+                                Margin="3">
+                                <StackLayout Orientation="Vertical">
+                                    <Grid VerticalOptions="CenterAndExpand">
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="Auto"/>
+                                            <ColumnDefinition Width="Auto"/>
+                                        </Grid.ColumnDefinitions>
+                                    </Grid>
+                                    <Label
+                                        Grid.Row="0"
+                                        Grid.Column="0"
+                                        Text="ID Producto: "
+                                        FontAttributes="Bold"/>
+                                    <Label
+                                        Grid.Row="0"
+                                        Grid.Column="1"
+                                        Text="{Binding CodigoProd}"/>
+                                    <Label
+                                        Grid.Row="1"
+                                        Grid.Column="0"
+                                        Text="Nombre: "
+                                        FontAttributes="Bold"/>
+                                    <Label
+                                        Grid.Row="1"
+                                        Grid.Column="1"
+                                        Text="{Binding Nombre}"/>
+                                    <Label
+                                        Grid.Row="2"
+                                        Grid.Column="0"
+                                        Text="Fecha de reabastecimiento: "
+                                        FontAttributes="Bold"/>
+                                    <Label
+                                        Grid.Row="2"
+                                        Grid.Column="1"
+                                        Text="{Binding Fech_Restblecido}"/>
+                                    <Label
+                                        Grid.Row="3"
+                                        Grid.Column="0"
+                                        Text="Stock disponible: "
+                                        FontAttributes="Bold"/>
+                                    <Label
+                                        Grid.Row="3"
+                                        Grid.Column="1"
+                                        Text="{Binding Stock}" />
+                                    <Label
+                                        Grid.Row="4"
+                                        Grid.Column="0"
+                                        Text="¿Disponible en envio delivery?"
+                                        FontAttributes="Bold"/>
+                                    <Label
+                                        Grid.Row="4"
+                                        Grid.Column="1"
+                                        Text="{ Binding Dispo_Delivery, Converter={StaticResource InverseBoolConverter} }"/>
+                                </StackLayout>
+                            </Frame>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
