--- a/Lab16/Lab16/View/CreateStudentPage.xaml
+++ b/Lab16/Lab16/View/CreateStudentPage.xaml
@@ -1,12 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:ViewModel="clr-namespace:Lab16.ViewModel"
              x:Class="Lab16.View.CreateStudentPage">
+    <ContentPage.BindingContext>
+        <ViewModel:StudentViewModel/>
+    </ContentPage.BindingContext>
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <StackLayout.Padding>
+                <OnPlatform
+                    x:TypeArguments="Thickness"
+                    Android="20"
+                    iOS="50"/>
+            </StackLayout.Padding>
+            <Label Text="Student" 
+                   FontSize="Large"
+                   HorizontalOptions="CenterAndExpand"
+                   FontAttributes="Bold"/>
+            <Label Text="StudentID :"
+                   FontSize="Medium"/>
+            <Entry Placeholder="StudentID"
+                   Text="{Binding StudentID}"
+                   Keyboard="Numeric"
+                   ClearButtonVisibility="WhileEditing">
+                <Entry.Behaviors>
+                    <ViewModel:NumericValidationBehavior/>
+                </Entry.Behaviors>
+            </Entry>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
